kubernetes/applications/archiveteam-warrior/archiveteam-warrior.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
spec:
  selector:
    matchLabels:
      app: archiveteam-warrior
  template:
    metadata:
      labels:
        app: archiveteam-warrior
    spec:
      containers:
        - name: archiveteam-warrior
          image: atdr.meo.ws/archiveteam/warrior-dockerfile:latest@sha256:19337aa9157e04f6cdb8f7c6f8c98e27d14efb0d9525334995fbdb036b95e1ca
          ports:
            - name: http
              containerPort: 8001
          livenessProbe:
            httpGet:
              path: "/info"
              port: 8001
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
spec:
  selector:
    app: archiveteam-warrior
  ports:
    - name: http
      port: 8001
      targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archiveteam-warrior
  namespace: archiveteam-warrior
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: warrior.toof.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archiveteam-warrior
                port:
                  number: 8001
